--- a/lesson_1_4/index.html
+++ b/lesson_1_4/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <script src="index.js"></script>
     <script src="tasks.js"></script>
+    <script src="taskHard_1.js"></script>
+    <script src="taskHard_2.js"></script>
 </head>
 <body>    
 </body>
