--- a/lesson_1_5/index.html
+++ b/lesson_1_5/index.html
@@ -7,6 +7,7 @@
     <script src="task01.js"></script>
     <script src="task02.js"></script>
     <script src="task03.js"></script>
+    <script src="calculate.js"></script>
 </head>
 <body>
     
